# ferrum_cloud

./: Cargo.toml  README.md
examples/: processed.ply  visualization_demo.rs
src/: error.rs  lib.rs  utils.rs
src/algorithms/: feature.rs  filter.rs  mod.rs  registration.rs  segmentation.rs
src/core/: cloud.rs  metadata.rs  mod.rs  point.rs  view.rs
src/io/: las.rs  mod.rs  pcd.rs  ply.rs
src/search/: kdtree.rs  mod.rs  octree.rs
src/visualization/: camera.rs  config.rs  mod.rs  renderer.rs  viewer.rs  window.rs
