[package]
name = "ferrum_cloud"
version = "0.1.0"
edition = "2024"
authors = ["StepfenShawn <m18824909883@163.com>"]
description = "Pure Rust implementation of Point Cloud Library (PCL)."
license = "MIT"
repository = "https://github.com/stepfenshawn/ferrum_cloud"

[dependencies]

# Parallel processing
rayon = "1.8"
crossbeam = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# I/O and file formats
byteorder = "1.5"
memmap2 = "0.9"

# Async runtime (for visualization)
tokio = { version = "1.0", features = ["full"], optional = true }

# Optional visualization dependencies
wgpu = { version = "25.0", optional = true }
winit = { version = "0.30", optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["std"]
std = []
visualization = ["tokio", "wgpu", "winit"]
